# ai-appsec-harness

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/ai-appsec-harness/: SKILL.md
.claude/skills/ai-appsec-harness/: SKILL.md
agents/: README.md
agents/prompts/: aisvs-evidence-agent.md  attestation-agent.md  csa-ai-mapper-agent.md  intake-agent.md  security-advisory-agent.md  threat-model-agent.md
data/: control-catalog.seed.json  reference-catalog.yml
docs/: agent-tool-import.md  ai-code-assistant-guidance.md  ai-defense-matrix.md  aisvs-operationalization.md  harness-design.md  harness-self-hardening.md  preflight-workflow.md  reference-catalog.md  security-advisory-response.md  threat-modeling-maestro.md  threat-modeling-stride.md  weekly-monitoring.md
examples/: ai-client-intake.example.json  harness-import-intake.example.json  security-advisory-request.example.json
examples/preflight/: basic-chatbot.preflight.json  hostile-repo.preflight.json  mcp-agent.preflight.json  rag-app.preflight.json
harness/: README.md
harness/ai_appsec_harness/: __init__.py  cli.py  evaluator.py  preflight.py
templates/: ai-code-assistant-request.md  aisvs-attestation.md  engineering-cohort-brief.md  preflight-report.md  security-advisory-response.md  system-intake.md  threat-model.md
tests/: test_evaluator.py  test_preflight.py
tools/: verify-harness-integrity.py
